--- a/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
+++ b/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
@@ -17,9 +17,22 @@
     "\n",
     "## Join Matlab Functions with Python: Standar Fourier Series, Fourier Transforms; with Python Application.\n",
     "\n",
-    "## 0 Solution PDF Document  \"20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\"\n",
     "\n",
-    "## 1 Folder Background Feedback 20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
+    "\n",
+    "## 0 Solution PDF Document\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. \"20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 1 Folder Background Feedback \n",
+    "\n",
+    "<!--- 20180324Edition of number.~\"1.\" after the ## Section adding the \".\" point  -->\n",
+    "\n",
+    "1. 20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
+    "\n",
     "\n",
     "\"Interpolación de Lagrange y Series de Fourier\" files: 20060214fescalonfourier2.m AND 20060214fescalonfouriernormal.m  \n",
     "\n",
@@ -40,6 +53,13 @@
     "\n",
     "## 3 Python codes, files, folders, commands AND *PDF for the Fourth WorkShop."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
