test of hide comment ´<>´ HEAD errors

--- a/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
+++ b/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
@@ -33,16 +33,6 @@
     "\n",
     "1. 20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
     "\n",
-    "<!--- 20180331_20180324_Edition of number.~\"1.\" after the ## Section adding the \".\" point. before text:\n",
-    "\n",
-    "## 0 Solution PDF Document\n",
-    "\"20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\"\n",
-    "\n",
-    "## 1 Folder Background Feedback \n",
-    "\n",
-    "20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
-    "\n",
-    "-->\n",
     "\n",
     "\"Interpolación de Lagrange y Series de Fourier\" files: 20060214fescalonfourier2.m AND 20060214fescalonfouriernormal.m  \n",
     "\n",
@@ -61,7 +51,20 @@
     "3. J. Nathan Kutz, Data-Driven Modeling & Scientific Computation: Methods for Complex Systems & Big Data, OUP Oxford, 2013. (Class Notes)Part III Computational Methods for Data\n",
     "Analysis, Section 13.1 Basics of Fourier Series and the Fourier Transform <!--- 20180319_582.pdf page 24  -->\n",
     "\n",
-    "## 3 Python codes, files, folders, commands AND *PDF for the Fourth WorkShop."
+    "## 3 Python codes, files, folders, commands AND *PDF for the Fourth WorkShop.\n",
+    "\n",
+    "\n",
+    "<!--- 20180331 Github or notebooks azure erros \"HEAD\" AND >>>>>>>  -->\n",
+    "<!--- 20180331_20180324_Edition of number.~\"1.\" after the ## Section adding the \".\" point. before text:\n",
+    "\n",
+    "## 0 Solution PDF Document\n",
+    "\"20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\"\n",
+    "\n",
+    "## 1 Folder Background Feedback \n",
+    "\n",
+    "20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
+    "\n",
+    "-->"
    ]
   },
   {
