test of hide comment ´<>´ HEAD errors

--- a/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
+++ b/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
@@ -15,8 +15,13 @@
     "\n",
     "Student: Gabriel Andrés Espinosa Barrios.\n",
     "\n",
+    "\n",
+    "The link of the Answers files and folders results are in: https://github.com/gabrielespinosa/andresgmComputingTools/tree/master/05_taller04/Answers\n",
+    "\n",
     "# Join Matlab Functions with Python: Standar Fourier Series, Fourier Transforms; with Python Application.\n",
     "\n",
+    "\n",
+    "Matlab Background Folder:  ~/Answers/20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes\n",
     "\n",
     "<!--- 20180331_20180324_Edition of number.~\"1.\" after the ## Section adding the \".\" point. -->\n",
     "## 0 Solution PDF Document\n",
