test of hide comment ´<>´ HEAD errors

--- a/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
+++ b/05_taller04/Answers/20180319StandarFourierSeriesFourierTransformsPythonApplication.ipynb
@@ -6,38 +6,36 @@
     "collapsed": true
    },
    "source": [
-    "<!--- 20180319AnswersfourthWorkShopTaller04 first feedback -->\n",
+    "<!--- 20180319AnswersfourthWorkShopTaller04 first feedback --> \n",
+    "\n",
     "20180319: GAEB(Gabriel Andrés Espinosa Barrios) Returning/re-entry Engineering PhD Graduate Student. University of the Andes(Universidad de los Andes). Cod:200311728 Id:110279864X. Bogota(Bogotá) D.C., Colombia.\n",
     "\n",
-    "#  COMPUTING TOOLS - FOURTH WORKSHOP-TALLER 4\n",
+    "\n",
+    "#  COMPUTING TOOLS - FOURTH WORKSHOP-TALLER 4 \n",
+    "\n",
     "\n",
     "Python files, folders, commands AND *PDF for the Fourth WorkShop.\n",
     "\n",
     "Student: Gabriel Andrés Espinosa Barrios.\n",
     "\n",
     "\n",
-    "The link of the Answers files and folders results are in: https://github.com/gabrielespinosa/andresgmComputingTools/tree/master/05_taller04/Answers\n",
+    "The link of the Answers files and folders results are in: https://github.com/gabrielespinosa/andresgmComputingTools/tree/master/05_taller04/Answers \n",
+    "\n",
     "\n",
     "# Join Matlab Functions with Python: Standar Fourier Series, Fourier Transforms; with Python Application.\n",
     "\n",
     "\n",
     "Matlab Background Folder:  ~/Answers/20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes\n",
     "\n",
-    "<!--- 20180331_20180324_Edition of number.~\"1.\" after the ## Section adding the \".\" point. -->\n",
+    "<!--- 20180331_20180324_Edition of number.~\"1.\" after the ## Section adding the \".\" point. --> \n",
+    "\n",
     "## 0 Solution PDF Document\n",
     "\n",
-    "\n",
-    "\n",
-    "1. \"20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\"\n",
-    "\n",
-    "\n",
+    "1. 20180319StandarFourierSeriesFourierTransformsPythonApplication.pdf\n",
     "\n",
     "## 1 Folder Background Feedback \n",
     "\n",
-    "\n",
-    "\n",
     "1. 20050130_20060214AnalisisNumericoBackgroundFeedbackUniandes = 20050130_20060214AnálisisNúmericoBackgroundFeedbackUniandes:\n",
-    "\n",
     "\n",
     "\"Interpolación de Lagrange y Series de Fourier\" files: 20060214fescalonfourier2.m AND 20060214fescalonfouriernormal.m  \n",
     "\n",
@@ -199,6 +197,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3.6",
    "language": "python",
